--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-<h1>Techniques used by Renaissance artist</h1>
+<h1>Techniques used by Renaissance artists</h1>
 <div class="row">
 <div class="col-sm-12 col-md-6 col-lg-4">
 <section class="box1">
